--- a/templates/notifica/buscar.html
+++ b/templates/notifica/buscar.html
@@ -62,7 +62,7 @@ Busqueda de Clientes
                             <div class="dropdown-menu" style="">
                               <a class="dropdown-item" href="{%url 'notifica_editar' notifica.id%}">Editar</a>
                               <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="{%url 'notifica_pdf' notifica.id%}">Crea Notificación</a>
+                              <a class="dropdown-item" href="{%url 'notifica_pdf' notifica.id%}">Imprimir Acta</a>
                                 <div class="dropdown-divider"></div>
                               <a class="dropdown-item" href="{%url 'presenta_editar' notifica.id%}">Presentacion persona</a>
                             </div>
