--- a/templates/obra/buscar.html
+++ b/templates/obra/buscar.html
@@ -58,7 +58,7 @@ Busqueda de Clientes
                             <div class="dropdown-menu" style="">
                               <a class="dropdown-item" href="{%url 'obra_editar' obra.id%}">Editar</a>
                               <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="{%url 'notifica_obra_pdf' obra.id%}">Crea Notificación</a>
+                              <a class="dropdown-item" href="{%url 'notifica_obra_pdf' obra.id%}">Imprimir Notificación</a>
                                 <div class="dropdown-divider"></div>
                               <a class="dropdown-item" href="{%url 'presenta_editar' obra.id%}">Presentacion persona</a>
                             </div>
